fixed overlapping buttons

--- a/packages/components/toggle-group/src/toggle-group.scss
+++ b/packages/components/toggle-group/src/toggle-group.scss
@@ -11,6 +11,8 @@
   border-radius: var(--_border-radius);
   display: inline-flex;
   gap: var(--_border-width);
+
+  // background-color: red;
 }
 
 :host([disabled]) {
@@ -54,14 +56,23 @@
 }
 
 :host([fill='solid']) {
-  // background-color: var(--sl-color-background-neutral-interactive-bold);
-
   --_group-border-width: var(--sl-size-borderWidth-none);
   --_border-width: var(--sl-size-borderWidth-none);
   --_toggle-group-border: 0px;
 
   ::slotted(sl-toggle-button) {
+    clip-path: inset(0 0.5px);
     margin-inline: -0.5px;
+  }
+
+  ::slotted(sl-toggle-button:first-of-type) {
+    clip-path: inset(0 0.5px 0 0);
+    margin-inline-start: 0;
+  }
+
+  ::slotted(sl-toggle-button:last-of-type) {
+    clip-path: inset(0 0 0 0.5px);
+    margin-inline-end: 0;
   }
 }
 
@@ -71,7 +82,6 @@
 
   border-end-end-radius: 0;
   border-start-end-radius: 0;
-  margin-inline-start: 0;
 }
 
 ::slotted(sl-toggle-button:last-of-type) {
@@ -80,7 +90,6 @@
 
   border-end-start-radius: 0;
   border-start-start-radius: 0;
-  margin-inline-end: 0;
 
   &::after {
     display: none;
